# open-monuments-inspect

./: MANIFEST.in  README.md  hooks.py  package.json  pyproject.toml  setup.py
.github/workflows/: auto-assign-issues.yml
monuments_inspect/: hooks.py  modules.txt  tasks.py
monuments_inspect/doctype/bevinding/: bevinding.json  bevinding.py
monuments_inspect/doctype/inspectie_foto/: inspectie_foto.json
monuments_inspect/doctype/thermografische_inspectie/: thermografische_inspectie.py
monuments_inspect/monuments_inspect/doctype/bevinding/: bevinding.json
monuments_inspect/monuments_inspect/doctype/inspectie/: inspectie.json  inspectie.py
monuments_inspect/monuments_inspect/doctype/inspectiefoto/: inspectiefoto.py
monuments_inspect/monuments_inspect/doctype/inspectieorie/: inspectieorie.json  inspectieorie.py
monuments_inspect/monuments_inspect/doctype/thermografischeinspectie/: thermografischeinspectie.json
