[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "monuments_inspect"
authors = [
    {name = "OpenAEC Foundation", email = "info@openaec.org"}
]
description = "Open-Monuments Inspect — NEN 2767 conditiemeting Frappe-app"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "LGPL-3.0"}
version = "0.1.0"

[tool.pytest.ini_options]
addopts = "--tb=short"
