[project]
name = "monuments_inspect"
authors = [
    {name = "OpenAEC Foundation", email = "info@openaec.org"}
]
description = "Open-Monuments Inspect — NEN 2767 conditiemeting Frappe-app"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
